# zkLinear

./: .gitignore  Cargo.toml  README.md
.agents/skills/: codex-autoresearch
docs/: CIRCOM_REPEAT_SCALING.md  CODE_TODO.md  DESIGN.md  EXTERNAL_PARITY_IMPORT.md  FIXED_PROFILE_METRICS.md  MODULE_LAYERING.md  NIZK_MASKING_MODEL.md  PARITY_TRACE_MATRIX.md  PRODUCTION_CHECKLIST.md  PROFILE_SWITCH_STATUS.md  REFERENCE_DIFF.md  RUNBOOK.md  SPEC_V1.md  STRUCTURE.md
profile/: README.md
profile/scripts/: explain_e2e.sh  profile_matrix.sh  profile_metrics.sh  profile_perf.sh
scripts/: ci_claims_gate.sh  generate_local_cases.sh  run_e2e_with_cache_flush.sh  strict_reference_audit.py
src/: lcpc_trace.rs  lib.rs  main.rs
src/api/: mod.rs  (+2 more)
tests/: README.md  brakedown.rs  brakedown_challenges.rs  brakedown_encoder.rs  brakedown_golden_consistency.rs  brakedown_param_tuning.rs  brakedown_pcs.rs  brakedown_wire.rs  case_shape_guards.rs  compiler.rs  e2e.rs  external_ref_repos.rs  field_profiles.rs  fixed_profile_metrics.rs  inner_sumcheck_naive.rs  inner_sumcheck_spartan.rs  lcpc_like_parity_with_reference.rs  leakage.rs  leakage_reference_probe.rs  nizk_setting_consistency.rs  parity_trace_equivalence.rs  parity_with_external_reference.rs  parity_with_reference.rs  profile_switch_e2e.rs  r1cs_mtx_pipeline_smoke.rs  r1cs_zkif_pipeline_smoke.rs  reference_compat.rs  spartan2.rs  spartan_brakedown_compiled.rs  spartan_brakedown_nizk.rs  spartan_brakedown_pipeline.rs  spec_v1_vectors.rs  sumcheck_generic_ext2.rs  testlog.rs  transcript_vectors.rs  verifier_boundary_lock.rs
(+68 files in other folders)
